<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/fragment_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:singleLine="true"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <EditText
        android:id="@+id/fragment_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_below="@id/fragment_login_username"/>

    <Button
        android:id="@+id/fragment_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color_dark"
        android:text="@string/login_fragment"
        android:textColor="@color/text"
        android:layout_below="@+id/fragment_login_password"/>

</RelativeLayout>