<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/header"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_side">

            <EditText
                android:id="@+id/activity_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/margin_bottom"/>

            <EditText
                android:id="@+id/activity_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/activity_register_username"
                android:layout_marginBottom="@dimen/margin_bottom"/>

            <EditText
                android:id="@+id/activity_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_below="@id/activity_register_email"
                android:layout_marginBottom="@dimen/margin_bottom"/>

            <Button
                android:id="@+id/activity_register_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@color/primary_color"
                android:textColor="@color/text"
                android:layout_below="@id/activity_register_password"/>

            <ProgressBar
                android:id="@+id/activity_register_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateOnly="true"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/activity_register_submit"
                android:layout_alignBottom="@id/activity_register_submit"/>
        </RelativeLayout>

</LinearLayout>